--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "pm2": "^2.10.4",
     "split": "^1.0.1",
     "typescript": "^2.9.1",
+    "web3": "^1.0.0-beta.34",
     "winston": "^3.0.0"
   },
   "devDependencies": {
